--- a/app/src/main/res/layout/content_group.xml
+++ b/app/src/main/res/layout/content_group.xml
@@ -5,11 +5,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.example.www.goldmineproject.MainActivity"
-    tools:showIn="@layout/activity_main">
+    tools:context="com.example.www.goldmineproject.GroupActivity"
+    tools:showIn="@layout/activity_group">
 
     <RelativeLayout
-        android:id="@+id/mainRelLayout"
         android:layout_width="match_parent"
         android:layout_height="512dp"
         tools:layout_editor_absoluteY="55dp">
