--- a/app/src/main/res/layout/content_profile.xml
+++ b/app/src/main/res/layout/content_profile.xml
@@ -5,11 +5,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.example.www.goldmineproject.MainActivity"
-    tools:showIn="@layout/activity_main">
+    tools:context="com.example.www.goldmineproject.ProfileActivity"
+    tools:showIn="@layout/activity_profile">
 
     <RelativeLayout
-        android:id="@+id/mainRelLayout"
         android:layout_width="match_parent"
         android:layout_height="512dp"
         tools:layout_editor_absoluteY="55dp">
@@ -29,14 +28,14 @@
             app:layout_constraintVertical_bias="0.0" />
 
         <LinearLayout
-            android:id="@+id/linearLayout"
             android:layout_width="368dp"
             android:layout_height="461dp"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
             android:orientation="vertical"
             tools:layout_editor_absoluteX="8dp"
-            tools:layout_editor_absoluteY="67dp">
+            tools:layout_editor_absoluteY="67dp"
+            android:id="@+id/linearLayout">
 
             <android.support.v7.widget.RecyclerView
                 android:layout_width="378dp"
@@ -54,3 +53,4 @@
     </RelativeLayout>
 
 </android.support.constraint.ConstraintLayout>
+
