--- a/app/src/main/res/layout/content_profile.xml
+++ b/app/src/main/res/layout/content_profile.xml
@@ -9,6 +9,7 @@
     tools:showIn="@layout/activity_profile">
 
     <RelativeLayout
+        android:id="@+id/profileRelLayout"
         android:layout_width="match_parent"
         android:layout_height="512dp"
         tools:layout_editor_absoluteY="55dp">
@@ -28,14 +29,14 @@
             app:layout_constraintVertical_bias="0.0" />
 
         <LinearLayout
+            android:id="@+id/linearLayout"
             android:layout_width="368dp"
             android:layout_height="461dp"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
             android:orientation="vertical"
             tools:layout_editor_absoluteX="8dp"
-            tools:layout_editor_absoluteY="67dp"
-            android:id="@+id/linearLayout">
+            tools:layout_editor_absoluteY="67dp">
 
             <android.support.v7.widget.RecyclerView
                 android:layout_width="378dp"
