--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -77,9 +77,7 @@
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
-                android:layout_marginTop="57dp">
-
-            </ListView>
+                android:layout_marginTop="57dp"/>
 
             <android.support.design.widget.FloatingActionButton
                 android:id="@+id/personalFAB"
@@ -88,14 +86,12 @@
                 android:layout_alignParentBottom="true"
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentRight="true"
-                android:layout_marginBottom="15dp"
+                android:layout_marginBottom="17dp"
                 android:layout_marginEnd="17dp"
                 android:layout_marginRight="17dp"
                 android:clickable="true"
                 app:fabSize="normal"
-                app:srcCompat="@android:drawable/ic_input_add"
-                tools:layout_editor_absoluteX="312dp"
-                tools:layout_editor_absoluteY="495dp" />
+                app:srcCompat="@android:drawable/ic_input_add" />
 
         </RelativeLayout>
 
@@ -109,8 +105,9 @@
                 android:id="@+id/groupTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
                 android:layout_centerHorizontal="true"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="69dp"
                 android:text="@string/label_empty_list"
                 android:textSize="24sp"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -133,9 +130,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
-                android:layout_marginBottom="20dp"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_marginBottom="17dp"
                 android:layout_marginEnd="17dp"
-                android:layout_marginRight="20dp"
+                android:layout_marginRight="17dp"
                 android:clickable="true"
                 app:fabSize="normal"
                 app:srcCompat="@android:drawable/ic_input_add" />
@@ -149,11 +148,11 @@
             tools:layout_editor_absoluteY="55dp">
 
             <TextView
-                android:id="@+id/profileTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
                 android:layout_centerHorizontal="true"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="69dp"
                 android:text="@string/label_empty_list"
                 android:textSize="24sp"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -176,9 +175,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
-                android:layout_marginBottom="20dp"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_marginBottom="17dp"
                 android:layout_marginEnd="17dp"
-                android:layout_marginRight="20dp"
+                android:layout_marginRight="17dp"
                 android:clickable="true"
                 app:fabSize="normal"
                 app:srcCompat="@android:drawable/ic_input_add" />
