--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -50,10 +50,71 @@
         app:layout_constraintVertical_bias="0.0">
 
         <RelativeLayout
+            android:id="@+id/groupRelLayout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentTop="true"
+            tools:layout_editor_absoluteY="55dp">
+
+            <ImageView
+                android:id="@+id/addGroupBut"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentTop="true"
+                android:layout_marginEnd="19dp"
+                android:layout_marginRight="19dp"
+                android:layout_marginTop="15dp"
+                app:srcCompat="@drawable/ic_plus" />
+
+            <TextView
+                android:id="@+id/groupTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="69dp"
+                android:text="@string/label_empty_list"
+                android:textSize="24sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.0" />
+
+            <ListView
+                android:id="@+id/groupListView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
+                android:layout_marginTop="57dp">
+
+            </ListView>
+
+        </RelativeLayout>
+
+        <RelativeLayout
             android:id="@+id/personalRelLayout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:layout_editor_absoluteY="55dp">
+
+            <ImageView
+                android:id="@+id/addPersAccBut"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentTop="true"
+                android:layout_marginEnd="19dp"
+                android:layout_marginRight="19dp"
+                android:layout_marginTop="19dp"
+                app:srcCompat="@drawable/ic_plus" />
 
             <TextView
                 android:id="@+id/personalTextView"
@@ -79,66 +140,6 @@
                 android:layout_alignParentTop="true"
                 android:layout_marginTop="57dp"/>
 
-            <android.support.design.widget.FloatingActionButton
-                android:id="@+id/personalFAB"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentRight="true"
-                android:layout_marginBottom="17dp"
-                android:layout_marginEnd="17dp"
-                android:layout_marginRight="17dp"
-                android:clickable="true"
-                app:fabSize="normal"
-                app:srcCompat="@android:drawable/ic_input_add" />
-
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:id="@+id/groupRelLayout"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            tools:layout_editor_absoluteY="55dp">
-
-            <TextView
-                android:id="@+id/groupTextView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentTop="true"
-                android:layout_centerHorizontal="true"
-                android:layout_marginTop="69dp"
-                android:text="@string/label_empty_list"
-                android:textSize="24sp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.0" />
-
-            <ListView
-                android:id="@+id/groupListView"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentTop="true"
-                android:layout_marginTop="57dp"/>
-
-            <android.support.design.widget.FloatingActionButton
-                android:id="@+id/groupFAB"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentRight="true"
-                android:layout_marginBottom="17dp"
-                android:layout_marginEnd="17dp"
-                android:layout_marginRight="17dp"
-                android:clickable="true"
-                app:fabSize="normal"
-                app:srcCompat="@android:drawable/ic_input_add" />
-
         </RelativeLayout>
 
         <RelativeLayout
@@ -146,6 +147,18 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:layout_editor_absoluteY="55dp">
+
+            <ImageView
+                android:id="@+id/addProfileBut"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentTop="true"
+                android:layout_marginEnd="19dp"
+                android:layout_marginRight="19dp"
+                android:layout_marginTop="19dp"
+                app:srcCompat="@drawable/ic_plus" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -169,20 +182,6 @@
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
                 android:layout_marginTop="57dp"/>
-
-            <android.support.design.widget.FloatingActionButton
-                android:id="@+id/profileFAB"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentRight="true"
-                android:layout_marginBottom="17dp"
-                android:layout_marginEnd="17dp"
-                android:layout_marginRight="17dp"
-                android:clickable="true"
-                app:fabSize="normal"
-                app:srcCompat="@android:drawable/ic_input_add" />
 
         </RelativeLayout>
 
